Several small fix

--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -192,7 +192,7 @@
                             </div>
                         </div>
                         <div class="form-group"  ng-class="{ 'has-error': detailForm.lines.$invalid && detailForm.lines.$dirty }">
-                            <label class="col-sm-2 control-label" required>Clinical Node</label>
+                            <label class="col-sm-2 control-label" required>Clinical Note</label>
                             <div class="col-sm-10">
                                 <textarea class="form-control" rows="6" ng-model="contentLines" name="lines" required></textarea>
                             </div>
@@ -273,7 +273,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group"  ng-class="{ 'has-error': detailForm.lines.$invalid && detailForm.lines.$dirty }">
-                                    <label class="col-sm-2 control-label" required>Clinical Node</label>
+                                    <label class="col-sm-2 control-label" required>Clinical Note</label>
                                     <div class="col-sm-10">
                                         <textarea class="form-control" rows="10" ng-model="contentLines" name="lines" required></textarea>
                                     </div>
